# oeste_web

./: CNAME  index.html  lead.php  projects.html  propuesta.html  recursos_gratuitos.html  resume.html
api_example/: #start.sh#  api.py  pyproject.toml  salida.json  start.sh
css/: styles.css
formaciones/: conocer-la-programacion.html
src/: propuesta.adoc
unlam/: matematicas.html  programacion.html  propuesta_matematicas.adoc  propuesta_programacion.adoc  temarios.adoc  temarios.html
