[tool.poetry]
name = "api-example"
version = "0.1.0"
description = ""
authors = ["Martin Algañaraz <idcmardelplata@gmail.com>"]
readme = "README.md"
packages = [{include = "api_example"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
